--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,17 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
   --font-sans: Garamond, serif, var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
 
-body {
-  font-family: Garamond, "Apple Garamond", "Baskerville", "Times New Roman", serif;
-}
-
-@theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -22,6 +14,7 @@ body {
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -57,7 +50,7 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: oklch(82.881% 0.13104 78.493);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -128,7 +121,9 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+    font-family: Garamond, "Apple Garamond", "Baskerville", "Times New Roman", serif;
   }
 }
